# ncurses-helloworld

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp
